测试了多终端兼容问题

--- a/change-password.html
+++ b/change-password.html
@@ -8,15 +8,22 @@
     />
     <meta name="flexible" content="initial-dpr=2" />
     <title>修改密码</title>
-    <!-- 手淘网适配移动端js -->
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
-    <style></style>
   </head>
 
   <body>
+    <!-- 顶部菜单 -->
+    <div class="weui-flex invoice-head">
+      <div class="weui-flex__item return">
+        <a href="javascript:;" onClick="javascript :history.back(-1);" class="invoice-return">返回</a>
+      </div>
+      <!-- <div class="weui-flex__item"><div class="placeholder">发票抬头</div></div> -->
+      <div class="homepage">
+        <a href="index.html"></a>
+      </div>
+    </div>
     <!-- 修改密码 -->
     <div class="change-password">
       <div class="weui-cells">
@@ -48,7 +55,7 @@
       >
     </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script>
       $("#showTooltips").click(function() {
         var tel = $("#newPassword").val();
