--- a/history-record.html
+++ b/history-record.html
@@ -8,8 +8,6 @@
     />
     <meta name="flexible" content="initial-dpr=2" />
     <title>记录详情</title>
-    <!-- 手淘网适配移动端js -->
-    <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -73,6 +71,6 @@
       </div>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
   </body>
 </html>
