--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script src="js/swiper.js"></script>
     <script>
       $(".banner .swiper-container").swiper({
