--- a/invoice-head.html
+++ b/invoice-head.html
@@ -25,7 +25,6 @@
       </div>
     <div class="weui-form-preview">
         <!-- 公司电子发票信息 -->
-        <div class="weui-cells__title"></div>
         <div class="weui-cells weui-cells_form">
           <div class="weui-cell">
             <div class="weui-cell__hd"><label class="weui-label">发票抬头：</label></div>
@@ -58,7 +57,7 @@
       <a href="javascript:;" class="weui-btn weui-btn_primary">提交</a>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script>
       $('.weui-form-preview__btn_default').click(function () {
           $(this).parents('.weui-form-preview').remove()
