--- a/invoice.html
+++ b/invoice.html
@@ -8,8 +8,6 @@
     />
     <meta name="flexible" content="initial-dpr=2" />
     <title>开票管理</title>
-    <!-- 手淘网适配移动端js -->
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -52,24 +50,6 @@
                   </label>
                   <label class="weui-cell weui-check__label">
                     <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" disabled='true' name="checkbox1">
-                      <i class="weui-icon-checked"></i>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-                          <div class="weui-media-box__bd">
-                            <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
-                            </h4>
-                            <div class="weui-media-box__title wrap-history-bottom">
-                              2019-01-12<span class="weui-media-box__title-after">小招</span>
-                            </div>
-                          </div>
-                        </a>
-                    </div>
-                  </label>
-                  <label class="weui-cell weui-check__label">
-                    <div class="weui-cell__hd">
                       <input type="checkbox" class="weui-check" name="checkbox1">
                       <i class="weui-icon-checked"></i>
                     </div>
@@ -104,7 +84,25 @@
                         </a>
                     </div>
                   </label>
-                  <label class="weui-cell weui-check__label" for="s13">
+                  <label class="weui-cell weui-check__label">
+                    <div class="weui-cell__hd">
+                      <input type="checkbox" class="weui-check" name="checkbox1">
+                      <i class="weui-icon-checked"></i>
+                    </div>
+                    <div class="weui-cell__bd">
+                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
+                          <div class="weui-media-box__bd">
+                            <h4 class="weui-media-box__title wrap-history">
+                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                            </h4>
+                            <div class="weui-media-box__title wrap-history-bottom">
+                              2019-01-12<span class="weui-media-box__title-after">小招</span>
+                            </div>
+                          </div>
+                        </a>
+                    </div>
+                  </label>
+                  <label class="weui-cell weui-check__label">
                     <div class="weui-cell__hd">
                       <input type="checkbox" class="weui-check" name="checkbox1">
                       <i class="weui-icon-checked"></i>
@@ -166,7 +164,7 @@
         </div>
       </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script>
       // 点击全选
       $(function(){
