--- a/nickname.html
+++ b/nickname.html
@@ -8,8 +8,6 @@
     />
     <meta name="flexible" content="initial-dpr=2" />
     <title>修改昵称</title>
-    <!-- 手淘网适配移动端js -->
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/weui.min.css" />  
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -17,7 +15,16 @@
   </head>
 
   <body>
-
+    <!-- 顶部菜单 -->
+    <div class="weui-flex invoice-head">
+      <div class="weui-flex__item return">
+        <a href="javascript:;" onClick="javascript :history.back(-1);" class="invoice-return">返回</a>
+      </div>
+      <!-- <div class="weui-flex__item"><div class="placeholder">发票抬头</div></div> -->
+      <div class="homepage">
+        <a href="index.html"></a>
+      </div>
+    </div>
     <div class="bd">
       <div class="weui-cells__title">请输入你的昵称</div>
       <div class="weui-cells">
@@ -32,7 +39,7 @@
         <a href="javascript:;" id='show-confirm' class="weui-btn weui-btn_primary">提交</a>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script>
     $(document).on("click", "#show-confirm", function() {
         $.confirm("你确认要修改此昵称吗?", "确认提交?", function() {
