--- a/personal.html
+++ b/personal.html
@@ -8,8 +8,6 @@
     />
     <meta name="flexible" content="initial-dpr=2" />
     <title>个人信息</title>
-    <!-- 手淘网适配移动端js -->
-    <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
     <link rel="stylesheet" href="css/weui.min.css" />  
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -67,7 +65,7 @@
         <a href="javascript:;" id='show-confirm' class="weui-btn weui-btn_primary">安全退出</a>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script>
     $(document).on("click", "#show-confirm", function() {
         $.confirm("您确定要退出本账号吗?", "确认退出?", function() {
