--- a/invoice-new.html
+++ b/invoice-new.html
@@ -92,7 +92,7 @@
         <a href="javascript:;" class="weui-btn weui-btn_primary">提交</a>
       </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script>
     </script>
   </body>
