--- a/mine.html
+++ b/mine.html
@@ -105,6 +105,6 @@
       </div>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
   </body>
 </html>
