修复PC显示混乱的问题

--- a/invoice.html
+++ b/invoice.html
@@ -29,10 +29,10 @@
               </div>
               <!-- 充值记录 -->
               <div class="weui-panel weui-panel_access">
-                <div id="check_invoice" class="weui-cells weui-cells_checkbox">
-                  <label class="weui-cell weui-check__label">
+                <div id="check_invoice" class="weui-cells weui-cells_checkbox check-invoice">
+                  <label class="weui-cell weui-check__label" for="s11">
                     <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s11">
                       <i class="weui-icon-checked"></i>
                     </div>
                     <div class="weui-cell__bd">
@@ -48,9 +48,9 @@
                         </a>
                     </div>
                   </label>
-                  <label class="weui-cell weui-check__label">
+                  <label class="weui-cell weui-check__label" for="s12">
                     <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s12">
                       <i class="weui-icon-checked"></i>
                     </div>
                     <div class="weui-cell__bd">
@@ -66,9 +66,9 @@
                         </a>
                     </div>
                   </label>
-                  <label class="weui-cell weui-check__label">
+                  <label class="weui-cell weui-check__label" for="s13">
                     <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s13">
                       <i class="weui-icon-checked"></i>
                     </div>
                     <div class="weui-cell__bd">
@@ -84,9 +84,9 @@
                         </a>
                     </div>
                   </label>
-                  <label class="weui-cell weui-check__label">
+                  <label class="weui-cell weui-check__label" for="s14">
                     <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s14">
                       <i class="weui-icon-checked"></i>
                     </div>
                     <div class="weui-cell__bd">
@@ -102,9 +102,9 @@
                         </a>
                     </div>
                   </label>
-                  <label class="weui-cell weui-check__label">
+                  <label class="weui-cell weui-check__label" for="s15">
                     <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s15">
                       <i class="weui-icon-checked"></i>
                     </div>
                     <div class="weui-cell__bd">
@@ -120,9 +120,9 @@
                         </a>
                     </div>
                   </label>
-                  <label class="weui-cell weui-check__label">
+                  <label class="weui-cell weui-check__label" for="s16">
                     <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s16">
                       <i class="weui-icon-checked"></i>
                     </div>
                     <div class="weui-cell__bd">
@@ -138,36 +138,92 @@
                         </a>
                     </div>
                   </label>
+                  <label class="weui-cell weui-check__label" for="s17">
+                    <div class="weui-cell__hd">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s17">
+                      <i class="weui-icon-checked"></i>
+                    </div>
+                    <div class="weui-cell__bd">
+                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
+                          <div class="weui-media-box__bd">
+                            <h4 class="weui-media-box__title wrap-history">
+                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                            </h4>
+                            <div class="weui-media-box__title wrap-history-bottom">
+                              2019-01-12<span class="weui-media-box__title-after">小招</span>
+                            </div>
+                          </div>
+                        </a>
+                    </div>
+                  </label>
+                  <label class="weui-cell weui-check__label" for="s18">
+                    <div class="weui-cell__hd">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s18">
+                      <i class="weui-icon-checked"></i>
+                    </div>
+                    <div class="weui-cell__bd">
+                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
+                          <div class="weui-media-box__bd">
+                            <h4 class="weui-media-box__title wrap-history">
+                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                            </h4>
+                            <div class="weui-media-box__title wrap-history-bottom">
+                              2019-01-12<span class="weui-media-box__title-after">小招</span>
+                            </div>
+                          </div>
+                        </a>
+                    </div>
+                  </label>
+                  <label class="weui-cell weui-check__label" for="s19">
+                    <div class="weui-cell__hd">
+                      <input type="checkbox" class="weui-check" name="checkbox1" id="s19">
+                      <i class="weui-icon-checked"></i>
+                    </div>
+                    <div class="weui-cell__bd">
+                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
+                          <div class="weui-media-box__bd">
+                            <h4 class="weui-media-box__title wrap-history">
+                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                            </h4>
+                            <div class="weui-media-box__title wrap-history-bottom">
+                              2019-01-12<span class="weui-media-box__title-after">小招</span>
+                            </div>
+                          </div>
+                        </a>
+                    </div>
+                  </label>
+                  <a href="javascript:void(0);" class="weui-cell weui-cell_link">
+                    <div class="weui-cell__bd">显示更多</div>
+                  </a>
                 </div>
               </div>
             </div>
         </div>
   
         <div class="weui-tabbar">
-            <div class="weui-flex__item next-step"><div class="placeholder">金额:<span>￥200元</span></div></div>
-            <div class="weui-flex__item">
-              <div class="weui-cells_checkbox" id="select_all">
-                <label class="weui-cell weui-ch2.eck__label">
-                  <div class="weui-cell__hd">
-                    <input type="checkbox" class="weui-check select_all" name="checkbox1">
-                    <i class="weui-icon-checked"></i>
-                  </div>
-                  <div class="weui-cell__bd select-all">
-                    <p>全选</p>
-                  </div>
-                </label>
-              </div>
+          <div class="weui-flex__item">
+            <div class="weui-cells_checkbox" id="select_all">
+              <label class="weui-cell weui-ch2.eck__label">
+                <div class="weui-cell__hd">
+                  <input type="checkbox" class="weui-check select_all" name="checkbox2">
+                  <i class="weui-icon-checked"></i>
+                </div>
+                <div class="weui-cell__bd select-all">
+                  <p>全选</p>
+                </div>
+              </label>
             </div>
-            <div class="weui-flex__item next-step">
-              <a href="invoice-head.html" class="weui-btn weui-btn_mini weui-btn_primary">下一步</a>
-            </div>
+          </div>
+          <div class="weui-flex__item next-step"><div class="placeholder">金额:<span>￥200元</span></div></div>
+          <div class="weui-flex__item next-step">
+            <a href="#" id="next_step" class="weui-btn weui-btn_mini weui-btn_primary">下一步</a>
+          </div>
         </div>
       </div>
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/jquery-weui.min.js"></script>
     <script>
-      // 点击全选
-      $(function(){
+      $(function(){            // 点击全选，再点击全部取消
         $(".select_all").click(function(){
           if(this.checked){
             $("input[type=checkbox]").prop("checked", "true");
@@ -176,8 +232,26 @@
               this.checked=false;
             });
           }
-        });         
-      });
+        });
+        var unit_price = '';  // 单价
+        var total_price = ''; // 总价
+        var checked_id = '';  // 选中的记录id
+        $("#next_step").click(function() {   // 点击下一步，获取选中的复选框的id
+          $("input[name='checkbox1']").each(function(){
+            // console.log($(this).attr("id"))
+            if($(this).is(":checked")) {
+              checked_id += $(this).attr("id") + ',';
+            }
+          })
+          console.log(checked_id);
+        })
+        $("input[name='checkbox1']").each(function(){  // 遍历每个复选框，并给他们加id
+          $(this).click(function(){
+            console.log($(this).attr("id"));
+          })
+        })
+        console.log(unit_price);
+      })
     </script>
   </body>
 </html>
