发票选择金额

--- a/invoice.html
+++ b/invoice.html
@@ -37,9 +37,12 @@
                     </div>
                     <div class="weui-cell__bd">
                         <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
+                          <div class="weui-media-box__hd">
+                            <img class="weui-media-box__thumb" src="images/history.png">
+                          </div>
                           <div class="weui-media-box__bd">
                             <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                              钱包充值 <i class="weui-media-box__title-after">元</i><strong class="weui-media-box__title-after">1.1</strong>
                             </h4>
                             <div class="weui-media-box__title wrap-history-bottom">
                               2019-01-12<span class="weui-media-box__title-after">小招</span>
@@ -55,9 +58,12 @@
                     </div>
                     <div class="weui-cell__bd">
                         <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
+                          <div class="weui-media-box__hd">
+                            <img class="weui-media-box__thumb" src="images/history.png">
+                          </div>
                           <div class="weui-media-box__bd">
                             <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                              钱包充值 <i class="weui-media-box__title-after">元</i><strong class="weui-media-box__title-after">2.1</strong>
                             </h4>
                             <div class="weui-media-box__title wrap-history-bottom">
                               2019-01-12<span class="weui-media-box__title-after">小招</span>
@@ -73,117 +79,12 @@
                     </div>
                     <div class="weui-cell__bd">
                         <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-                          <div class="weui-media-box__bd">
-                            <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
-                            </h4>
-                            <div class="weui-media-box__title wrap-history-bottom">
-                              2019-01-12<span class="weui-media-box__title-after">小招</span>
-                            </div>
+                          <div class="weui-media-box__hd">
+                            <img class="weui-media-box__thumb" src="images/history.png">
                           </div>
-                        </a>
-                    </div>
-                  </label>
-                  <label class="weui-cell weui-check__label" for="s14">
-                    <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1" id="s14">
-                      <i class="weui-icon-checked"></i>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
                           <div class="weui-media-box__bd">
                             <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
-                            </h4>
-                            <div class="weui-media-box__title wrap-history-bottom">
-                              2019-01-12<span class="weui-media-box__title-after">小招</span>
-                            </div>
-                          </div>
-                        </a>
-                    </div>
-                  </label>
-                  <label class="weui-cell weui-check__label" for="s15">
-                    <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1" id="s15">
-                      <i class="weui-icon-checked"></i>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-                          <div class="weui-media-box__bd">
-                            <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
-                            </h4>
-                            <div class="weui-media-box__title wrap-history-bottom">
-                              2019-01-12<span class="weui-media-box__title-after">小招</span>
-                            </div>
-                          </div>
-                        </a>
-                    </div>
-                  </label>
-                  <label class="weui-cell weui-check__label" for="s16">
-                    <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1" id="s16">
-                      <i class="weui-icon-checked"></i>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-                          <div class="weui-media-box__bd">
-                            <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
-                            </h4>
-                            <div class="weui-media-box__title wrap-history-bottom">
-                              2019-01-12<span class="weui-media-box__title-after">小招</span>
-                            </div>
-                          </div>
-                        </a>
-                    </div>
-                  </label>
-                  <label class="weui-cell weui-check__label" for="s17">
-                    <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1" id="s17">
-                      <i class="weui-icon-checked"></i>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-                          <div class="weui-media-box__bd">
-                            <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
-                            </h4>
-                            <div class="weui-media-box__title wrap-history-bottom">
-                              2019-01-12<span class="weui-media-box__title-after">小招</span>
-                            </div>
-                          </div>
-                        </a>
-                    </div>
-                  </label>
-                  <label class="weui-cell weui-check__label" for="s18">
-                    <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1" id="s18">
-                      <i class="weui-icon-checked"></i>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-                          <div class="weui-media-box__bd">
-                            <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
-                            </h4>
-                            <div class="weui-media-box__title wrap-history-bottom">
-                              2019-01-12<span class="weui-media-box__title-after">小招</span>
-                            </div>
-                          </div>
-                        </a>
-                    </div>
-                  </label>
-                  <label class="weui-cell weui-check__label" for="s19">
-                    <div class="weui-cell__hd">
-                      <input type="checkbox" class="weui-check" name="checkbox1" id="s19">
-                      <i class="weui-icon-checked"></i>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-                          <div class="weui-media-box__bd">
-                            <h4 class="weui-media-box__title wrap-history">
-                              钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                              钱包充值 <i class="weui-media-box__title-after">元</i><strong class="weui-media-box__title-after">3.1</strong>
                             </h4>
                             <div class="weui-media-box__title wrap-history-bottom">
                               2019-01-12<span class="weui-media-box__title-after">小招</span>
@@ -201,20 +102,18 @@
         </div>
   
         <div class="weui-tabbar">
-          <div class="weui-flex__item">
-            <div class="weui-cells_checkbox" id="select_all">
-              <label class="weui-cell weui-ch2.eck__label">
-                <div class="weui-cell__hd">
-                  <input type="checkbox" class="weui-check select_all" name="checkbox2">
-                  <i class="weui-icon-checked"></i>
-                </div>
-                <div class="weui-cell__bd select-all">
-                  <p>全选</p>
-                </div>
-              </label>
-            </div>
+          <div class="weui-flex__item weui-cells_checkbox" id="select_all">
+            <label class="weui-cell weui-check__label">
+              <div class="weui-cell__hd">
+                <input type="checkbox" class="weui-check select_all" name="checkbox2">
+                <i class="weui-icon-checked"></i>
+              </div>
+              <div class="weui-cell__bd select-all">
+                <p>全选</p>
+              </div>
+            </label>
           </div>
-          <div class="weui-flex__item next-step"><div class="placeholder">金额:<span>￥200元</span></div></div>
+          <div class="weui-flex__item next-step"><div class="placeholder">金额:<span>0</span><i>元</i></div></div>
           <div class="weui-flex__item next-step">
             <a href="#" id="next_step" class="weui-btn weui-btn_mini weui-btn_primary">下一步</a>
           </div>
@@ -223,34 +122,55 @@
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/jquery-weui.min.js"></script>
     <script>
-      $(function(){            // 点击全选，再点击全部取消
-        $(".select_all").click(function(){
+      $(function(){              // 点击全选，金额相加，再点击全部取消，金额相减
+        var unit_price = '';     // 单价
+        var total_price = 0.00;  // 总价
+        var checked_id = '';     // 选中的记录id
+        var total_price_span = $(".placeholder").find("span");  // 总金额的span节点
+
+        $("input[name='checkbox2']").bind("click",(function(){  // 给全选按钮加点击事件
           if(this.checked){
+            $("input[name='checkbox1']").not(":checked").each(function (){  // 遍历未被选中的复选框
+              unit_price = $(this).parents(".weui-cell").find("strong").text();  // 获取到strong的单价
+              total_price = (total_price * 10 + (parseFloat(unit_price)) * 10) / 10;
+              total_price_span.text(total_price.toFixed(2));  // 要还是出现精度问题，就四舍五入取2位
+            });
             $("input[type=checkbox]").prop("checked", "true");
           }else{
             $("input[type='checkbox']").each(function(){
+              $("input[name='checkbox1']").each(function (){
+                unit_price = $(this).parents(".weui-cell").find("strong").text();  // 获取到strong的单价
+                total_price = 0.00;
+                total_price_span.text(total_price.toFixed(2));  // 要还是出现精度问题，就四舍五入取2位
+              });
               this.checked=false;
             });
           }
-        });
-        var unit_price = '';  // 单价
-        var total_price = ''; // 总价
-        var checked_id = '';  // 选中的记录id
+        }));
+
         $("#next_step").click(function() {   // 点击下一步，获取选中的复选框的id
           $("input[name='checkbox1']").each(function(){
-            // console.log($(this).attr("id"))
             if($(this).is(":checked")) {
               checked_id += $(this).attr("id") + ',';
             }
           })
           console.log(checked_id);
         })
-        $("input[name='checkbox1']").each(function(){  // 遍历每个复选框，并给他们加id
+
+        $("input[name='checkbox1']").each(function (){  // 遍历每个复选框，并给他们加点击事件
           $(this).click(function(){
-            console.log($(this).attr("id"));
+            unit_price = $(this).parents(".weui-cell").find("strong").text();  // 获取到strong的单价
+            if ($(this).is(":checked")) {
+              total_price = (total_price * 10 + (parseFloat(unit_price)) * 10) / 10;
+            }else {
+              total_price = (total_price * 10 - (parseFloat(unit_price)) * 10) / 10;
+            }
+            total_price_span.text(total_price.toFixed(2));  // 要还是出现精度问题，就四舍五入取2位
+            if (total_price == 0) {  // 当总金额为0的时候取消全选
+              $("input[name='checkbox2']").removeAttr("checked");
+            }
           })
         })
-        console.log(unit_price);
       })
     </script>
   </body>
